crates/macro/ui-tests/immediate-closure-variance.stderr
error[E0412]: cannot find type `ImmediateClosure` in this scope
  --> ui-tests/immediate-closure-variance.rs:10:20
   |
10 |     let immediate: ImmediateClosure<dyn FnMut() -> u32> = ImmediateClosure::new_mut(&mut closure);
   |                    ^^^^^^^^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `ImmediateClosure` in this scope
  --> ui-tests/immediate-closure-variance.rs:11:16
   |
11 |     let _bad: &ImmediateClosure<dyn FnMut() -> Number> = immediate.upcast_ref();
   |                ^^^^^^^^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `ImmediateClosure` in this scope
  --> ui-tests/immediate-closure-variance.rs:16:21
   |
16 |     let immediate2: ImmediateClosure<dyn FnMut(Number)> = ImmediateClosure::new_mut(&mut closure2);
   |                     ^^^^^^^^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `ImmediateClosure` in this scope
  --> ui-tests/immediate-closure-variance.rs:17:17
   |
17 |     let _bad2: &ImmediateClosure<dyn FnMut(u32)> = immediate2.upcast_ref();
   |                 ^^^^^^^^^^^^^^^^ not found in this scope

warning: unused import: `wasm_bindgen::prelude::*`
 --> ui-tests/immediate-closure-variance.rs:2:5
  |
2 | use wasm_bindgen::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0433]: failed to resolve: use of undeclared type `ImmediateClosure`
  --> ui-tests/immediate-closure-variance.rs:10:59
   |
10 |     let immediate: ImmediateClosure<dyn FnMut() -> u32> = ImmediateClosure::new_mut(&mut closure);
   |                                                           ^^^^^^^^^^^^^^^^ use of undeclared type `ImmediateClosure`

error[E0433]: failed to resolve: use of undeclared type `ImmediateClosure`
  --> ui-tests/immediate-closure-variance.rs:16:59
   |
16 |     let immediate2: ImmediateClosure<dyn FnMut(Number)> = ImmediateClosure::new_mut(&mut closure2);
   |                                                           ^^^^^^^^^^^^^^^^ use of undeclared type `ImmediateClosure`
